fixtures/cs-hash-01/bad/require-crypto-md5.js
const crypto = require("crypto");

function check(password, expected) {
	return crypto.createHash("md5").update(password).digest("hex");
}

module.exports = { check };
